[gd_scene load_steps=15 format=3 uid="uid://b0spoldeo7sp8"]

[ext_resource type="Script" uid="uid://cwk6hvwrf8usk" path="res://Scripts/initializevr.gd" id="1_r75v8"]
[ext_resource type="Script" uid="uid://bf0oiwuxmarhw" path="res://Scripts/depthray/moveTracker.gd" id="2_7a8wt"]

[sub_resource type="Environment" id="Environment_2t1jq"]

[sub_resource type="CylinderMesh" id="CylinderMesh_7a8wt"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_y6y3c"]
transparency = 1
blend_mode = 1
depth_draw_mode = 1
albedo_color = Color(0.67498493, 0.5052356, 0.999996, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ij5s4"]
albedo_color = Color(0.9529412, 0, 0.09019608, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_7a8wt"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_r75v8"]
albedo_color = Color(0.14509805, 0.5568628, 0.5882353, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7a8wt"]
transparency = 1
albedo_color = Color(1, 0.40392157, 0, 0.5529412)

[sub_resource type="BoxShape3D" id="BoxShape3D_ij5s4"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wuiqc"]
transparency = 1
albedo_color = Color(1.0000322, 1.0039686, 0.22064078, 0.5254902)

[sub_resource type="BoxShape3D" id="BoxShape3D_y6y3c"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_h0wkq"]
transparency = 1
albedo_color = Color(0.85786575, 0.5274898, 0.9476877, 0.4509804)

[sub_resource type="BoxShape3D" id="BoxShape3D_wuiqc"]

[node name="Node3D" type="Node3D"]
script = ExtResource("1_r75v8")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.08686353, 0.8868179, -0.45388195, -0.15191406, 0.46206695, 0.873737, 0.9845694, -0.00694483, 0.17485687, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_2t1jq")

[node name="Player" type="XROrigin3D" parent="."]
transform = Transform3D(0.99999976, 0, 0, 0, 1, 0, 0, 0, 0.99999976, 0, 0.123353, 0)

[node name="XRCamera3D" type="XRCamera3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)

[node name="Left" type="XRController3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1, -0.5)
tracker = &"left_hand"

[node name="CSGBox3D" type="CSGBox3D" parent="Player/Left"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)

[node name="Right" type="XRController3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1, -0.5)
tracker = &"right_hand"

[node name="CSGBox3D" type="CSGBox3D" parent="Player/Right"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)

[node name="rayPath" type="RayCast3D" parent="Player/Right"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player/Right/rayPath"]
transform = Transform3D(0.02, 0, 0, 0, 3.02, 6.519258e-09, 0, -5.9604645e-07, 0.019999996, 0, -3.0701056, -0.00096833706)
mesh = SubResource("CylinderMesh_7a8wt")
surface_material_override/0 = SubResource("StandardMaterial3D_y6y3c")

[node name="Mover" type="CSGBox3D" parent="Player/Right"]
transform = Transform3D(0.05, 0, 0, 0, -2.1855695e-09, -0.05, 0, 0.050000004, -2.1855695e-09, 0, -0.0036278963, -0.112053156)
material_override = SubResource("StandardMaterial3D_ij5s4")
script = ExtResource("2_7a8wt")

[node name="Area3D" type="Area3D" parent="Player/Right/Mover"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player/Right/Mover/Area3D"]
shape = SubResource("BoxShape3D_7a8wt")
debug_color = Color(0.8901961, 0.92156863, 0.69803923, 0.41960785)

[node name="Floor" type="CSGBox3D" parent="."]
transform = Transform3D(50, 0, 0, 0, 1, 0, 0, 0, 50, -1.7525616, -0.7079706, 0.09614563)
material_override = SubResource("StandardMaterial3D_r75v8")
size = Vector3(9.397766, 1.1992188, 1)

[node name="Grab_1" type="CSGBox3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 1.007857, -2.8010812)
material_override = SubResource("StandardMaterial3D_7a8wt")

[node name="Area3D_ORANGE" type="Area3D" parent="Grab_1"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Grab_1/Area3D_ORANGE"]
shape = SubResource("BoxShape3D_ij5s4")

[node name="Grab_2" type="CSGBox3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -1.9866259, 1.0183871, -1.7755395)
material = SubResource("StandardMaterial3D_wuiqc")

[node name="Area3D_YELLOW" type="Area3D" parent="Grab_2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Grab_2/Area3D_YELLOW"]
shape = SubResource("BoxShape3D_y6y3c")

[node name="Grab_3" type="CSGBox3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 1.4547558, 1.0042042, -1.1465592)
material = SubResource("StandardMaterial3D_h0wkq")

[node name="Area3D_PURPLE" type="Area3D" parent="Grab_3"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Grab_3/Area3D_PURPLE"]
shape = SubResource("BoxShape3D_wuiqc")

[connection signal="button_pressed" from="Player/Right" to="Player/Right/Mover" method="_on_right_button_pressed"]
[connection signal="button_released" from="Player/Right" to="Player/Right/Mover" method="_on_right_button_released"]
[connection signal="input_vector2_changed" from="Player/Right" to="Player" method="_on_right_input_vector_2_changed"]
[connection signal="input_vector2_changed" from="Player/Right" to="Player/Right/Mover" method="_on_right_input_vector_2_changed"]
[connection signal="area_entered" from="Player/Right/Mover/Area3D" to="Player/Right/Mover" method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Player/Right/Mover/Area3D" to="Player/Right/Mover" method="_on_area_3d_area_exited"]
